--- a/background/inda.html
+++ b/background/inda.html
@@ -7,19 +7,24 @@
     <title>Gift</title>
 </head>
 <body>
-    <div class="container">
-        <div class="box" id="gift-box" onclick="showImage()">
+    <body>
+        <div class="container">
+          <div class="box" id="gift-box" onclick="showImage()">
             <div class="box-body">
-                <div class="box-lid"></div>
-                </div>
+              <div class="box-lid"></div>
             </div>
+          </div>
         </div>
         <div class="image" id="gift-image-container">
-            <img src="https://github.com/hoangtm-dev/bbun/blob/main/images/image.png?raw=true" alt="Gift Image" id="gift-image" onclick="jumpOutImage()">
-            <h1 id="click-text">Click To Open !</h1>
+          <img src="/images/image.png" alt="Gift Image" id="gift-image" onclick="jumpOutImage()">
+          <h1 id="click-text">Click To Open !</h1>
         </div>
         <audio id="background-music" src="p1.mp3"></audio>
         <div class="letter" id="white-box"></div>
-    <script src="script.js"></script>
+        <canvas id="testCanvas" width="550" height="500" class="hidden"></canvas>
+        <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+        <script src="script.js"></script>
+      </body>
+      
 </body>
 </html>
