--- a/background/inda.html
+++ b/background/inda.html
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="image" id="gift-image-container">
-          <img src="https://raw.githubusercontent.com/hoangtm-dev/bbun/refs/heads/main/images/image.png" alt="Gift Image" id="gift-image" onclick="jumpOutImage()">
+                      <img src="https://github.com/hoangtm-dev/bbun/blob/main/images/image.png?raw=true" alt="Gift Image" id="gift-image" onclick="jumpOutImage()">
           <h1 id="click-text">Click To Open !</h1>
         </div>
         <audio id="background-music" src="p1.mp3"></audio>
