--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="no" onclick="showSadImage()">Hông</button>
         </div>
     </div>
-        <script>
+    <script>
         // Ngăn chặn chuột phải
         document.addEventListener('contextmenu', function(e) {
             e.preventDefault();
@@ -45,6 +45,7 @@
                 // Bạn có thể thực hiện hành động khác ở đây, như chuyển hướng hoặc ẩn nội dung
             }
         }, 1000);
+    </script>
     <script src="src/script.js"></script>
 </body>
 </html>
