--- a/background/inda.html
+++ b/background/inda.html
@@ -24,7 +24,7 @@
         <canvas id="testCanvas" width="550" height="500" class="hidden"></canvas>
         <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
         <script src="script.js"></script>
-            <script>
+    <script>
         // Ngăn chặn chuột phải
         document.addEventListener('contextmenu', function(e) {
             e.preventDefault();
@@ -45,6 +45,7 @@
                 // Bạn có thể thực hiện hành động khác ở đây, như chuyển hướng hoặc ẩn nội dung
             }
         }, 1000);
+    </script>
       </body>
       
 </body>
